# sambaza

./: .gitignore  README.md  build.gradle  settings.gradle
.github/workflows/: main.yml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/java/com/auterion/rtsp_proxy/: RtspProxy.kt  RtspProxyImpl.kt  RtspSrcProxyImpl.kt
android/src/main/java/com/auterion/sambaza/: H264Frame.kt  JniApi.kt  PushableProxy.kt  PushableProxyImpl.kt  RtspProxy.kt  RtspProxyImpl.kt  RtspSrcProxyImpl.kt  StreamInfo.kt
android/src/test/java/com/auterion/rtsp_proxy/: RtspProxyImplTest.kt
android/src/test/java/com/auterion/sambaza/: RtspProxyImplTest.kt  StreamInfoTest.kt
src/: CMakeLists.txt
src/dependencies/glib/: CMakeLists.txt
src/dependencies/gstreamer/: CMakeLists.txt
src/dependencies/iconv/: CMakeLists.txt
src/dependencies/meson/: android-x86_64.cross
src/main/: AndroidManifest.xml  CMakeLists.txt  rtsp_proxy_jni_api.c  rtsp_server.c
src/main/cpp/: CMakeLists.txt  appsink_proxy.c  appsrc_factory.h  gstbuffer_to_sink.c  rtsp_server.c  rtsp_server.h
src/main/cpp/dependencies/: CMakeLists.txt
src/main/cpp/dependencies/glib/: CMakeLists.txt  glib-iconv-pkgconfig.patch
src/main/cpp/dependencies/gstreamer/: CMakeLists.txt
src/main/cpp/dependencies/iconv/: CMakeLists.txt  my-iconv.pc.in
src/main/cpp/dependencies/meson/: android-aarch64.cross  android-armv7.cross  android-x86.cross  android-x86_64.cross
src/main/cpp/main/: CMakeLists.txt  appsink_proxy.h  appsrc_factory.c  gstbuffer_to_sink.h  rtspsrc_to_sink.c  rtspsrc_to_sink.h
src/main/java/com/auterion/rtsp_proxy/: H264Frame.kt  JniApi.kt  PushableProxy.kt  PushableProxyImpl.kt  RtspProxyImpl.kt  StreamInfo.kt
